2007-11-21 [colin]	3.1.0cvs14

	* src/compose.c
	* src/crash.c
	* src/exphtmldlg.c
	* src/mainwindow.c
	* src/manual.c
	* src/mimeview.c
	* src/prefs_account.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_ext_prog.c
	* src/textview.c
	* src/uri_opener.c
	* src/gtk/about.c
	* src/gtk/gtkutils.c
		Use xdg-open as a way to find default browser,
		when available

2007-11-21 [colin]	3.1.0cvs13

	* src/messageview.c
	* src/procmime.c
	* src/procmsg.h
		Send better return receipts (useful ones)
		Handle incoming return receipts

2007-11-20 [colin]	3.1.0cvs12

	* src/printing.c
	* src/printing.h
		Add getter/setter for settings, and getter
		for page setup

2007-11-20 [colin]	3.1.0cvs11

	* src/folderview.c
	* src/main.c
	* src/mainwindow.c
		Fix bug 1396, 'Crash on disabling a filter 
		while it is processing'

2007-11-20 [paul]	3.1.0cvs10

	* src/folder.c
		fix bug 1395, 'Crash on checking for new mails
		while filter is running'
		Thanks to Colin

2007-11-20 [paul]	3.1.0cvs9

	* src/compose.c
		make this string easier for translators

2007-11-19 [colin]	3.1.0cvs8

	* src/prefs_summaries.c
	* src/summaryview.c
		Don't enable more tooltips on Maemo

2007-11-19 [colin]	3.1.0cvs7

	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_summaries.c
	* src/summaryview.c
		Fix bug 1388, 'message list tool tips'
		Add (optional) tooltips in summaryview.
		This only works with GTK+ >= 2.12

2007-11-19 [colin]	3.1.0cvs6

	* src/compose.c
		Make strings a bit better when attaching
		from mailto: URIs

2007-11-19 [colin]	3.1.0cvs5

	* src/common/utils.c
		Fix bug 1392, 'Top level domain .EU is 
		not recognised as valid'

2007-11-19 [wwp]	3.1.0cvs4

	* src/compose.c
	* src/compose.h
		Revert changes to compose.c made in 3.1.0cvs2.

2007-11-19 [wwp]	3.1.0cvs3

	* src/addressbook.c
	* src/addressbook.h
	* src/editaddress.c
	* src/editgroup.c
	* src/addrduplicates.c
		Minor improvements in the address book:
		always accept new contacts provided that some