@@ -3072,3 +3072,4 @@
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/printing.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/printing.h;  ) > 3.1.0cvs12.patchset
 ( cvs diff -u -r 1.94.2.163 -r 1.94.2.164 src/messageview.c;  cvs diff -u -r 1.49.2.102 -r 1.49.2.103 src/procmime.c;  cvs diff -u -r 1.60.2.49 -r 1.60.2.50 src/procmsg.h;  ) > 3.1.0cvs13.patchset
 ( cvs diff -u -r 1.382.2.425 -r 1.382.2.426 src/compose.c;  cvs diff -u -r 1.23.2.27 -r 1.23.2.28 src/crash.c;  cvs diff -u -r 1.3.2.22 -r 1.3.2.23 src/exphtmldlg.c;  cvs diff -u -r 1.274.2.221 -r 1.274.2.222 src/mainwindow.c;  cvs diff -u -r 1.11.2.13 -r 1.11.2.14 src/manual.c;  cvs diff -u -r 1.83.2.123 -r 1.83.2.124 src/mimeview.c;  cvs diff -u -r 1.105.2.116 -r 1.105.2.117 src/prefs_account.c;  cvs diff -u -r 1.204.2.152 -r 1.204.2.153 src/prefs_common.c;  cvs diff -u -r 1.103.2.98 -r 1.103.2.99 src/prefs_common.h;  cvs diff -u -r 1.3.2.18 -r 1.3.2.19 src/prefs_ext_prog.c;  cvs diff -u -r 1.96.2.192 -r 1.96.2.193 src/textview.c;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/uri_opener.c;  cvs diff -u -r 1.4.2.56 -r 1.4.2.57 src/gtk/about.c;  cvs diff -u -r 1.5.2.72 -r 1.5.2.73 src/gtk/gtkutils.c;  ) > 3.1.0cvs14.patchset
+( cvs diff -u -r 1.204.2.153 -r 1.204.2.154 src/prefs_common.c;  cvs diff -u -r 1.395.2.337 -r 1.395.2.338 src/summaryview.c;  ) > 3.1.0cvs15.patchset
